compiler/weave_syntax/tests/data/Strings.error
error: Expected ';'
        --> <source>:68:2
         |
      68 | r#~"#"~#;
         |  ^
error: Unexpected tokens
        --> <source>:68:2
         |
      68 | r#~"#"~#;
         |  ^^^^^^^
